// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/p2004a/gbcsdpd/api;gbcsdpd_api_v1";

package gbcsdpd.api.v1;

message Measurement {
    string sensor_mac = 1;

    // The float value below can be set to NaN to indicate
    // that value is not available.

    // Climate
    float temperature = 10; // C
    float humidity = 11;    // RH %
    float pressure = 12;    // hPa

    // Sensor information
    float battery_voltage = 20; // V
}

message MeasurementsPublication {
    repeated Measurement measurements = 1;
}
